faq resolve spacing closes #4

--- a/src/app/faqs/faqs.module.css
+++ b/src/app/faqs/faqs.module.css
@@ -70,7 +70,7 @@
   display: grid;              
   grid-template-columns: repeat(1, 1fr);
   margin: 0px auto;
-  row-gap: 50px;
+  row-gap: 25px;
   z-index: 3;
 }
 
